kubernetes/common/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-demo-accountingservice-ingress
  labels:
    app.kubernetes.io/instance: opentelemetry-demo
    app.kubernetes.io/name: opentelemetry-demo-accountingservice
spec:
  podSelector:
    matchLabels:
      opentelemetry.io/name: opentelemetry-demo-accountingservice
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ecommerce
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-demo-adservice-ingress
  labels:
    app.kubernetes.io/instance: opentelemetry-demo
    app.kubernetes.io/name: opentelemetry-demo-adservice
spec:
  podSelector:
    matchLabels:
      opentelemetry.io/name: opentelemetry-demo-adservice
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ecommerce
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-demo-cartservice-ingress
  labels:
    app.kubernetes.io/instance: opentelemetry-demo
    app.kubernetes.io/name: opentelemetry-demo-cartservice
spec:
  podSelector:
    matchLabels:
      opentelemetry.io/name: opentelemetry-demo-cartservice
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ecommerce
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-demo-checkoutservice-ingress
  labels:
    app.kubernetes.io/instance: opentelemetry-demo
    app.kubernetes.io/name: opentelemetry-demo-checkoutservice
spec:
  podSelector:
    matchLabels:
      opentelemetry.io/name: opentelemetry-demo-checkoutservice
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ecommerce
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-demo-currencyservice-ingress
  labels:
    app.kubernetes.io/instance: opentelemetry-demo
    app.kubernetes.io/name: opentelemetry-demo-currencyservice
spec:
  podSelector:
    matchLabels:
      opentelemetry.io/name: opentelemetry-demo-currencyservice
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ecommerce
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-demo-emailservice-ingress
  labels:
    app.kubernetes.io/instance: opentelemetry-demo
    app.kubernetes.io/name: opentelemetry-demo-emailservice
spec:
  podSelector:
    matchLabels:
      opentelemetry.io/name: opentelemetry-demo-emailservice
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ecommerce
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-demo-flagd-ingress
  labels:
    app.kubernetes.io/instance: opentelemetry-demo
    app.kubernetes.io/name: opentelemetry-demo-flagd
spec:
  podSelector:
    matchLabels:
      opentelemetry.io/name: opentelemetry-demo-flagd
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ecommerce
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-demo-frauddetectionservice-ingress
  labels:
    app.kubernetes.io/instance: opentelemetry-demo
    app.kubernetes.io/name: opentelemetry-demo-frauddetectionservice
spec:
  podSelector:
    matchLabels:
      opentelemetry.io/name: opentelemetry-demo-frauddetectionservice
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ecommerce
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-demo-frontend-ingress
  labels:
    app.kubernetes.io/instance: opentelemetry-demo
    app.kubernetes.io/name: opentelemetry-demo-frontend
spec:
  podSelector:
    matchLabels:
      opentelemetry.io/name: opentelemetry-demo-frontend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ecommerce
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-demo-frontendproxy-ingress
  labels:
    app.kubernetes.io/instance: opentelemetry-demo
    app.kubernetes.io/name: opentelemetry-demo-frontendproxy
spec:
  podSelector:
    matchLabels:
      opentelemetry.io/name: opentelemetry-demo-frontendproxy
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ecommerce
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-demo-imageprovider-ingress
  labels:
    app.kubernetes.io/instance: opentelemetry-demo
    app.kubernetes.io/name: opentelemetry-demo-imageprovider
spec:
  podSelector:
    matchLabels:
      opentelemetry.io/name: opentelemetry-demo-imageprovider
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ecommerce
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-demo-kafka-ingress
  labels:
    app.kubernetes.io/instance: opentelemetry-demo
    app.kubernetes.io/name: opentelemetry-demo-kafka
spec:
  podSelector:
    matchLabels:
      opentelemetry.io/name: opentelemetry-demo-kafka
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ecommerce
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-demo-loadgenerator-ingress
  labels:
    app.kubernetes.io/instance: opentelemetry-demo
    app.kubernetes.io/name: opentelemetry-demo-loadgenerator
spec:
  podSelector:
    matchLabels:
      opentelemetry.io/name: opentelemetry-demo-loadgenerator
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ecommerce
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-demo-paymentservice-ingress
  labels:
    app.kubernetes.io/instance: opentelemetry-demo
    app.kubernetes.io/name: opentelemetry-demo-paymentservice
spec:
  podSelector:
    matchLabels:
      opentelemetry.io/name: opentelemetry-demo-paymentservice
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ecommerce
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-demo-productcatalogservice-ingress
  labels:
    app.kubernetes.io/instance: opentelemetry-demo
    app.kubernetes.io/name: opentelemetry-demo-productcatalogservice
spec:
  podSelector:
    matchLabels:
      opentelemetry.io/name: opentelemetry-demo-productcatalogservice
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ecommerce
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-demo-quoteservice-ingress
  labels:
    app.kubernetes.io/instance: opentelemetry-demo
    app.kubernetes.io/name: opentelemetry-demo-quoteservice
spec:
  podSelector:
    matchLabels:
      opentelemetry.io/name: opentelemetry-demo-quoteservice
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ecommerce
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-demo-recommendationservice-ingress
  labels:
    app.kubernetes.io/instance: opentelemetry-demo
    app.kubernetes.io/name: opentelemetry-demo-recommendationservice
spec:
  podSelector:
    matchLabels:
      opentelemetry.io/name: opentelemetry-demo-recommendationservice
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ecommerce
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-demo-shippingservice-ingress
  labels:
    app.kubernetes.io/instance: opentelemetry-demo
    app.kubernetes.io/name: opentelemetry-demo-shippingservice
spec:
  podSelector:
    matchLabels:
      opentelemetry.io/name: opentelemetry-demo-shippingservice
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ecommerce
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-demo-valkey-ingress
  labels:
    app.kubernetes.io/instance: opentelemetry-demo
    app.kubernetes.io/name: opentelemetry-demo-valkey
spec:
  podSelector:
    matchLabels:
      opentelemetry.io/name: opentelemetry-demo-valkey
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ecommerce
---
